basic vector page

--- a/vectorSquare.qrc
+++ b/vectorSquare.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/assets">
         <file>vecBracket.png</file>
+        <file>bracket.png</file>
     </qresource>
 </RCC>
