--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -29,6 +29,12 @@
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
      <widget class="QFrame" name="sidebar">
+      <property name="minimumSize">
+       <size>
+        <width>120</width>
+        <height>0</height>
+       </size>
+      </property>
       <property name="maximumSize">
        <size>
         <width>120</width>
@@ -90,7 +96,7 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>94</width>
+            <width>100</width>
             <height>335</height>
            </rect>
           </property>
