layout kinda fixed

--- a/spansetpane.ui
+++ b/spansetpane.ui
@@ -10,18 +10,24 @@
     <height>400</height>
    </rect>
   </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">.QScrollArea#frame {
+   <string notr="true">.QScrollArea#scrollArea {
 	border-image: url(:/assets/SetBracket.png) 36 36 36 36 stretch;
-	border-width: 36px;
+	border-width: 12px;
 }</string>
   </property>
-  <layout class="QHBoxLayout" name="horizontalLayout">
+  <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
-    <widget class="QScrollArea" name="frame">
+    <widget class="QScrollArea" name="scrollArea">
      <property name="widgetResizable">
       <bool>true</bool>
      </property>
@@ -30,10 +36,17 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>16</width>
-        <height>304</height>
+        <width>52</width>
+        <height>352</height>
        </rect>
       </property>
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <layout class="QHBoxLayout" name="horizontalLayout"/>
      </widget>
     </widget>
    </item>
