--- a/vectorpane.ui
+++ b/vectorpane.ui
@@ -32,6 +32,18 @@
 }</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
+   <property name="topMargin">
+    <number>0</number>
+   </property>
+   <property name="rightMargin">
+    <number>0</number>
+   </property>
+   <property name="bottomMargin">
+    <number>0</number>
+   </property>
    <item>
     <widget class="QWidget" name="numLayout" native="true">
      <layout class="QVBoxLayout" name="verticalLayout_3"/>
