--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -83,8 +83,8 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>100</width>
-            <height>30</height>
+            <width>98</width>
+            <height>28</height>
            </rect>
           </property>
           <attribute name="label">
@@ -122,6 +122,13 @@
             </size>
            </property>
           </spacer>
+         </item>
+         <item>
+          <widget class="QPushButton" name="calculator">
+           <property name="text">
+            <string>Calculator</string>
+           </property>
+          </widget>
          </item>
          <item>
           <widget class="QPushButton" name="historyButton">
